@@ -1,3 +1,5 @@
+* Optimize select_qsa() and id, name, and class selectors for non html elements. [jddalton]
+
 * Make IE6/7 not use gEBN because changes to the name attribute aren't reflected by the gEBN results. [Diego Perini, jddalton]
 
 * Ensure `NWID` is not assigned to non-html documents because that could throw an error. [jddalton]
